Add member names to page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <h1>Welcome to the Group 10 project page</h1>
+    <h2>Group Members</h2>
+    <ul>
+      <li>Hannah Carr</li>
+      <li>Justin Henley</li>
+      <li>Victor Munoz</li>
+      <li>Dustin Threet</li>
+    </ul>
   </body>
 </html>
