Add document section

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
       <li>Victor Munoz</li>
       <li>Dustin Threet</li>
     </ul>
+    <h2>Documents</h2>
+    <ul>
+      <li>Project Proposal: -</li>
+      <!--TODO add link/download for finished proposal-->
+    </ul>
   </body>
 </html>
