--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     </ul>
     <h2>Documents</h2>
     <ul>
-      <li>Project Proposal: -</li>
-      <!--TODO add link/download for finished proposal-->
+      <li><a href="https://drive.google.com/file/d/1FrU98wgH9FLsxeomwyrD00fDvVm02YQ6/view">Project Proposal</a></li>
     </ul>
   </body>
 </html>
