Add report 1 part 1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
     </ul>
     <h2>Documents</h2>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1FrU98wgH9FLsxeomwyrD00fDvVm02YQ6/view">Project Proposal</a></li>
+      <li>
+        <a href="https://drive.google.com/file/d/1FrU98wgH9FLsxeomwyrD00fDvVm02YQ6/view?usp=sharing"
+          >Project Proposal</a
+        >
+      </li>
+      <li>
+        <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing"
+          >Report One - Part One</a
+        >
+      </li>
     </ul>
   </body>
 </html>
