Add Report One Part Two link, github links

--- a/index.html
+++ b/index.html
@@ -15,17 +15,25 @@
       <li>Victor Munoz</li>
       <li>Dustin Threet</li>
     </ul>
+    <h2>Github</h2>
+    <ul>
+      <li>
+        <a href="https://github.com/FHSU-Group-10">Group 10 Organization Page</a>
+      </li>
+      <li>
+        <a href="https://github.com/FHSU-Group-10/parking-garages">Project Repo</a>
+      </li>
+    </ul>
     <h2>Documents</h2>
     <ul>
       <li>
-        <a href="https://drive.google.com/file/d/1FrU98wgH9FLsxeomwyrD00fDvVm02YQ6/view?usp=sharing"
-          >Project Proposal</a
-        >
+        <a href="https://drive.google.com/file/d/1FrU98wgH9FLsxeomwyrD00fDvVm02YQ6/view?usp=sharing">Project Proposal</a>
       </li>
       <li>
-        <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing"
-          >Report One - Part One</a
-        >
+        <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing">Report One - Part One</a>
+      </li>
+      <li>
+        <a href="https://drive.google.com/file/d/1G23IlJqq6Tv0aa5DmeU0OnpvYhc5vM3l/view?usp=sharing"> Report One - Part Two </a>
       </li>
     </ul>
   </body>
