--- a/index.html
+++ b/index.html
@@ -4,43 +4,117 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Group 10</title>
+    <title>Group 10 - CSCI-441-VA</title>
+    <!-- Bootstrap CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>-->
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+      integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Welcome to the Group 10 project page</h1>
-    <h2>Group Members</h2>
-    <ul>
-      <li>Hannah Carr</li>
-      <li>Justin Henley</li>
-      <li>Victor Munoz</li>
-      <li>Dustin Threet</li>
-    </ul>
-    <h2>Github</h2>
-    <ul>
-      <li>
-        <a href="https://github.com/FHSU-Group-10">Group 10 Organization Page</a>
-      </li>
-      <li>
-        <a href="https://github.com/FHSU-Group-10/parking-garages">Project Repo</a>
-      </li>
-    </ul>
-    <h2>Documents</h2>
-    <ul>
-      <li>
-        <a href="https://drive.google.com/file/d/1FrU98wgH9FLsxeomwyrD00fDvVm02YQ6/view?usp=sharing">Project Proposal</a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing">Report One - Part One</a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/1G23IlJqq6Tv0aa5DmeU0OnpvYhc5vM3l/view?usp=sharing">Report One - Part Two</a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/1KyVMqZdq3IMduJt1uJ1oMROL0OQRODKg/view?usp=sharing">Report One - Full Report</a>
-      </li>
-      <li>
-        <a href="https://drive.google.com/file/d/18FVq1MBATkxDqGLaVXLAaGeYFJgzKMdD/view?usp=sharing">Report Two - Part One</a>
-      </li>
-    </ul>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Group 10 - CSCI 441 VA</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="#members" class="nav-link">Members</a>
+            </li>
+            <li class="nav-item">
+              <a href="#links" class="nav-link">Links</a>
+            </li>
+            <li class="nav-item">
+              <a href="#docs" class="nav-link">Documents</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div style="max-width: 1000px; margin: auto">
+      <h1 style="margin: 1em; text-align: center">Welcome to the Group 10 project page</h1>
+
+      <section id="members">
+        <h2>Group Members</h2>
+        <ul>
+          <li>Hannah Carr</li>
+          <li>Justin Henley</li>
+          <li>Victor Munoz</li>
+          <li>Dustin Threet</li>
+        </ul>
+      </section>
+      <section id="links">
+        <h2>Links</h2>
+        <ul>
+          <li>
+            <h3>Github</h3>
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <a href="https://github.com/FHSU-Group-10/parking-garages">Project Repo</a>
+              </li>
+              <li class="list-group-item">
+                <a href="https://github.com/FHSU-Group-10">Group 10 Organization Page</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="docs">
+        <h2>Documents</h2>
+        <div style="display: flex; flex-wrap: wrap">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Project Proposal</h5>
+              <h6 class="card-subtitle mb-2 text-muted">System Specification</h6>
+              <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing">Proposal</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Report One</h5>
+              <h6 class="card-subtitle mb-2 text-muted">System Specification</h6>
+
+              <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing">Part One</a>
+              |
+              <a href="https://drive.google.com/file/d/1G23IlJqq6Tv0aa5DmeU0OnpvYhc5vM3l/view?usp=sharing">Part Two</a>
+              |
+              <a href="https://drive.google.com/file/d/1KyVMqZdq3IMduJt1uJ1oMROL0OQRODKg/view?usp=sharing">Full Report</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Report Two</h5>
+              <h6 class="card-subtitle mb-2 text-muted">System Design</h6>
+
+              <a href="https://drive.google.com/file/d/18FVq1MBATkxDqGLaVXLAaGeYFJgzKMdD/view?usp=sharing">Part One</a>
+              |
+              <a href="https://drive.google.com/file/d/1EWW6JF4OXbsLRdD9Qz1pWQkg_byP7Haj/view?usp=sharing">Part Two</a>
+              |
+              <a href="" style="color: red">Full Report</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
