Remove horizontal list; fix typos

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
         <h2>Links</h2>
         <ul>
           <li>
-            <h3>Github</h3>
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
+            <h4>GitHub</h4>
+            <ul>
+              <li>
                 <a href="https://github.com/FHSU-Group-10/parking-garages">Project Repo</a>
               </li>
-              <li class="list-group-item">
+              <li>
                 <a href="https://github.com/FHSU-Group-10">Group 10 Organization Page</a>
               </li>
             </ul>
@@ -84,8 +84,8 @@
         <div style="display: flex; flex-wrap: wrap">
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Project Proposal</h5>
-              <h6 class="card-subtitle mb-2 text-muted">System Specification</h6>
+              <h5 class="card-title">Proposal</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Project Proposal</h6>
               <a href="https://drive.google.com/file/d/1lSVPS9dwJsXz9XT3v1ymVENNiSLJCybm/view?usp=sharing">Proposal</a>
             </div>
           </div>
