Add report two part 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     </nav>
-    <div style="max-width: 1000px; margin: auto">
+    <div style="max-width: 1000px; margin: auto; padding: 0 1em 0 1em">
       <h1 style="margin: 1em; text-align: center">Welcome to the Group 10 project page</h1>
 
       <section id="members">
@@ -110,7 +110,7 @@
               |
               <a href="https://drive.google.com/file/d/1EWW6JF4OXbsLRdD9Qz1pWQkg_byP7Haj/view?usp=sharing">Part Two</a>
               |
-              <a href="" style="color: red">Full Report</a>
+              <a href="https://drive.google.com/file/d/1a3gXlnI1s5eA7a71YFPA7FcRUcudEqIw/view?usp=sharing">Full Report</a>
             </div>
           </div>
         </div>
