Update with new report sections and live links

--- a/index.html
+++ b/index.html
@@ -51,21 +51,33 @@
         </div>
       </div>
     </nav>
-    <div style="max-width: 1000px; margin: auto">
+    <div style="max-width: 1000px; margin: 0 1em">
       <h1 style="margin: 1em; text-align: center">Welcome to the Group 10 project page</h1>
 
       <section id="members">
         <h2>Group Members</h2>
         <ul>
-          <li>Hannah Carr</li>
           <li>Justin Henley</li>
           <li>Victor Munoz</li>
           <li>Dustin Threet</li>
+          <del><li>&nbsp;Hannah Carr&nbsp;</li></del>
         </ul>
       </section>
       <section id="links">
         <h2>Links</h2>
         <ul>
+          <li>
+            <h4>Live Demo</h4>
+            <ul>
+              <li>
+                <a href="https://parking-garages.onrender.com/">Main Branch</a>
+              </li>
+              <li>
+                <a href="https://dev-garages.onrender.com/">Dev Branch</a>
+              </li>
+            </ul>
+          </li>
+
           <li>
             <h4>GitHub</h4>
             <ul>
@@ -98,17 +110,29 @@
               |
               <a href="https://drive.google.com/file/d/1G23IlJqq6Tv0aa5DmeU0OnpvYhc5vM3l/view?usp=sharing">Part Two</a>
               |
-              <a href="https://drive.google.com/file/d/1KyVMqZdq3IMduJt1uJ1oMROL0OQRODKg/view?usp=sharing">Full Report</a>
+              <a href="https://drive.google.com/file/d/1KyVMqZdq3IMduJt1uJ1oMROL0OQRODKg/view?usp=sharing"
+                >Full Report</a
+              >
             </div>
           </div>
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <h5 class="card-title">Report Two</h5>
               <h6 class="card-subtitle mb-2 text-muted">System Design</h6>
-
               <a href="https://drive.google.com/file/d/18FVq1MBATkxDqGLaVXLAaGeYFJgzKMdD/view?usp=sharing">Part One</a>
               |
               <a href="https://drive.google.com/file/d/1EWW6JF4OXbsLRdD9Qz1pWQkg_byP7Haj/view?usp=sharing">Part Two</a>
+              |
+              <a href="https://drive.google.com/file/d/1a3gXlnI1s5eA7a71YFPA7FcRUcudEqIw/view?usp=sharing">
+                Full Report
+              </a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Report Three</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Complete Report</h6>
+              <a href="https://drive.google.com/file/d/1Zj1ecC4XbI_xFyQG-Wil1w4pvgWmsARz/view?usp=sharing">Part One</a>
               |
               <a href="" style="color: red">Full Report</a>
             </div>
